WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117048
fourthTier: LLInt shouldn't store an offset call PC during op_call-like calls
https://bugs.webkit.org/show_bug.cgi?id=117048
Summary
fourthTier: LLInt shouldn't store an offset call PC during op_call-like calls
Filip Pizlo
Reported
2013-05-30 14:54:46 PDT
It should be consistent: the PC that it stores into ArgumentCount + TagOffset should always be the *current* PC. This allows us to kill off a bunch of nasty code, and it should also make it easier to have dispatchAfterCall() do the job previously done by op_call_put_result.
Attachments
the patch
(15.05 KB, patch)
2013-05-30 16:05 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-05-30 16:05:39 PDT
Created
attachment 203390
[details]
the patch
Mark Hahnenberg
Comment 2
2013-05-30 16:12:07 PDT
Comment on
attachment 203390
[details]
the patch r=me
Filip Pizlo
Comment 3
2013-05-30 16:29:59 PDT
Landed in
http://trac.webkit.org/changeset/150993
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug