Source/JavaScriptCore/bytecode/Opcode.h
@@ -179,7 +179,7 @@ namespace JSC {
     macro(op_new_func_exp, 3) \
     macro(op_call, 6) \
     macro(op_call_eval, 6) \
-    macro(op_call_varargs, 5) \
+    macro(op_call_varargs, 6) \
     macro(op_tear_off_activation, 2) \
     macro(op_tear_off_arguments, 3) \
     macro(op_ret, 2) \
